--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "MiraiBot-DC-Nam",
+    "name": "MiraiBot",
     "version": "1.2.15",
     "description": "A simple Facebook Messenger Bot made by me(CatalizCS) and my brother SpermLord.",
     "main": "mirai.js",
